--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
           <h2>Coming Soon</h2>
         </div>
       </div>
+      <div class="cado-bg">
+        <span class="bg-letter">C</span>
+        <span class="bg-letter">A</span>
+        <span class="bg-letter">D</span>
+        <span class="bg-letter">O</span>
+      </div>
       <div class="row align-items-center">
         <div class="col-sm-10 col-md-6 col-lg-6 svg-img p-5">
           <svg
