--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <link rel="icon" type="image/x-icon" href="favicon.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap -->
     <link
@@ -22,14 +25,14 @@
       rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" href="style.css" />
-    <title>CADO</title>
+    <title>Document</title>
   </head>
   <body>
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-10 main-title">
-          <h1>CADO HOMES</h1>
-          <h2>Coming Soon</h2>
+          <h1>Website</h1>
+          <h2>under construction</h2>
         </div>
       </div>
       <div class="cado-bg">
@@ -255,7 +258,7 @@
     </div>
       <footer class="footer">
         <div class="container text-center">
-          <span>cadohomes.com</span>
+          <span>your-website-name.com</span>
         </div>
       </footer>
 
