--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     </div>
       <footer class="footer">
         <div class="container text-center">
-          <span>your-website-name.com</span>
+          <span>cadohomes.com</span>
         </div>
       </footer>
 
